2011-01-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/torrus.fcgi.in: Let FCGI handler re-spawn after every 50-100
	requests for better DB stability

2010-12-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
	
	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	new discovery parameter: RFC2863_IF_MIB::ifnick-from-ifname
	provides backwards compatibility with devices which have non-unique
	ifName values

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	ifDescr and ifName are checked for uniqueness before being used for
	default interface indexing	

2010-12-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm:
	added Port QoS stats (ME3400)

2010-12-19  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2662_ADSL_LINE.pm:
	re-organized the templates for Cisco 837 compatibility

2010-12-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* sup/webplain/torrus.css: slightly darker top and bottom shortcuts

	* perllib/Torrus/DevDiscover.pm (discover):
	New discovery parameter: X-tokenset-rrgraph-view

	* templates/default-tset.html: New view parameter: rrgraph-view

2010-11-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
        * perllib/Torrus/DevDiscover/CiscoIOS.pm:
        New discovery parameter: CiscoIOS::enable-dialer-interfaces

2010-11-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	bugfix: RFC2863_IF_MIB::nodeid-hint=ifIndex  did not really work

2010-11-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/CGI.pm (do_process): added extra DB cleaninup

2010-11-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm:
	Added CISCO-WAN-3G-MIB support

2010-11-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoWLC.pm: