@@ -1,3 +1,8 @@
+2011-01-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/Renderer/HTML.pm (makeURL):
+	Now nodeid is used in HTML whenever available
+
 2011-01-16  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* bin/torrus.fcgi.in: Let FCGI handler re-spawn after every 50-100
